--- a/NReport/Web.config
+++ b/NReport/Web.config
@@ -89,7 +89,7 @@
     <httpModules>
       <add type="DevExpress.Web.ASPxHttpHandlerModule, DevExpress.Web.v19.2, Version=19.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" name="ASPxHttpHandlerModule" />
     </httpModules>
-    <globalization culture="" uiCulture="" />
+    <globalization culture="ar" uiCulture="en" />
     <httpRuntime maxRequestLength="4096" requestValidationMode="4.0" executionTimeout="110" targetFramework="4.7.2" />
   </system.web>
   <system.webServer>
