--- a/NReport/NReport.csproj
+++ b/NReport/NReport.csproj
@@ -288,6 +288,7 @@
     <Compile Include="Controllers\GridViewController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\SchedulerController.cs" />
+    <Compile Include="Controllers\SettingController.cs" />
     <Compile Include="DAL\SessionFactory.cs" />
     <Compile Include="DAL\TSOUTERREPORT.cs" />
     <Compile Include="Global.asax.cs">
@@ -306,6 +307,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Reports\" />
+    <Folder Include="Views\Setting\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\licenses.licx" />
