--- a/NReport/Web.config
+++ b/NReport/Web.config
@@ -1,4 +1,5 @@
-<?xml version="1.0" ?><!--
+<?xml version="1.0"?>
+<!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=152368
   -->
@@ -13,7 +14,6 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="data source=(localdb)\mssqllocaldb;initial catalog=aspnet-NReport-20191225123525;integrated security=SSPI" providerName="System.Data.SqlClient" />
     <add name="ConnectionString" connectionString="Data Source=localhost;Initial Catalog=Tarasol;Integrated Security=False;Persist Security Info=True;User ID=sa;Password=sa" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
@@ -23,6 +23,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="vs:EnableBrowserLink" value="false" />
+    <add key="TarasolLink" value="true" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2">
